# claude-ai-cli-llm-generated

./: .gitignore  CHANGELOG.md  COLOR_USAGE.md  Cargo.toml  DIALOG_INSTRUCTIONS_FIX.md  HOTKEY_UPDATE.md  README.md
docs/: README.md
docs/development/: IMPLEMENTATION_SUMMARY.md
src/: api.rs  app.rs  client.rs  config.rs  config_color_tests.rs  config_utils_tests.rs  main.rs  main_loop_tests.rs  syntax.rs  tui.rs
src/handlers/: api.rs  api_tests.rs  events.rs  file_ops.rs  file_ops_tests.rs  history.rs  mod.rs
src/handlers/events/: dialog_tests.rs  dialogs.rs  dialogs_tests.rs  input.rs  input_tests.rs  integration_tests.rs  mod.rs  navigation.rs  navigation_tests.rs  shortcuts.rs  shortcuts_tests.rs  test_dialogs.rs
src/handlers/events/tests/: api_tests.rs  config_utils_tests.rs  dialog_tests.rs  file_ops_tests.rs  integration_tests.rs  mod.rs  shortcuts_tests.rs  ui_tests.rs
src/ui/: borders.rs  dialogs.rs  layout.rs  mod.rs  render.rs  ui_tests.rs
src/utils/: mod.rs  scroll.rs  text.rs
