[package]
name = "claude-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Interactive command-line client for the Anthropic Claude API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/claude-cli"
keywords = ["anthropic", "claude", "api", "cli", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rustyline = "14"
syntect = "5"
crossterm = "0.27"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "claude-cli"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

#[package]
#name = "chat_sender"
#version = "0.1.0"
#edition = "2021"

#[dependencies]
#clap = { version = "4.4", features = ["derive"] }
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1.37", features = ["full"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
