[package]
name = "claude_ai_cli_llm_generated"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/SpaceAceMonkey/claude-ai-cli-llm-generated"

[[bin]]
name = "claudecli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.2"
base64 = "0.21"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
syntect = "5"
crossterm = "0.27"
ratatui = "0.26"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
quickcheck = "1.0"